fix: text-overflow

--- a/src/renderer/components/MainWindow/Sidebar.module.less
+++ b/src/renderer/components/MainWindow/Sidebar.module.less
@@ -47,10 +47,7 @@
       padding-left: 19px;
     }
     .routeTitle {
-      // display: none;
       opacity: 0;
-      text-overflow: initial;
-      // transition: none;
     }
 
     .divider {
